back-up/ocm-c1/crd.projectcalico.org/v1/globalnetworkpolicies/allowbgp.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"crd.projectcalico.org/v1","kind":"GlobalNetworkPolicy","metadata":{"annotations":{},"name":"allowbgp"},"spec":{"egress":[{"action":"Allow","destination":{"selector":"has(lke.linode.com/pool-id)"}}],"ingress":[{"action":"Allow","source":{"selector":"has(lke.linode.com/pool-id)"}}],"order":0,"selector":"has(lke.linode.com/pool-id)"}}
  creationTimestamp: "2023-08-11T08:00:37Z"
  generation: 1
  managedFields:
  - apiVersion: crd.projectcalico.org/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:egress: {}
        f:ingress: {}
        f:order: {}
        f:selector: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2023-08-11T08:00:37Z"
  name: allowbgp
  resourceVersion: "266"
  uid: fafc97a8-fa41-4404-88f2-2c20edfae2ac
spec:
  egress:
  - action: Allow
    destination:
      selector: has(lke.linode.com/pool-id)
  ingress:
  - action: Allow
    source:
      selector: has(lke.linode.com/pool-id)
  order: 0
  selector: has(lke.linode.com/pool-id)
